--- a/devel/m4/Makefile
+++ b/devel/m4/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 1997/11/13 14:37:52 hubertf Exp $
+# $NetBSD: Makefile,v 1.5 1997/12/22 07:45:39 hubertf Exp $
 # New ports collection makefile for:	m4
 # Version required:     1.4
 # Date created:		25 October 1994
@@ -12,7 +12,7 @@ CATEGORIES=	devel
 MASTER_SITES=   ${MASTER_SITE_GNU}
 
 GNU_CONFIGURE=yes
-CONFIGURE_ARGS= --program-prefix=g
+CONFIGURE_ARGS+= --program-prefix=g
 
 OPSYS!= uname -s
 
