--- a/print/gv/Makefile
+++ b/print/gv/Makefile
@@ -1,9 +1,10 @@
 # New ports collection makefile for:	gv
 # Version required:	gv-3.5.8
-# Date created:		16 Apr 1996
-# Whom:			tg@freebsd.org
+# Date created:		Nov 1997
+# Whom:			soren@t.dk
 #
-# $Id: Makefile,v 1.1.1.1 1997/12/29 02:38:27 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/12/29 02:42:26 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.16 1997/07/13 18:49:29 max Exp
 #
 
 DISTNAME=	gv-3.5.8
@@ -15,6 +16,8 @@ MAINTAINER=	ports@freebsd.org
 LIB_DEPENDS=	Xaw3d\\.6\\.:${PORTSDIR}/x11/Xaw3d
 
 USE_IMAKE=	yes
+
+CAT1=		gv.0
 
 post-install:
 .if !defined(NOPORTDOCS)
