--- a/print/Makefile
+++ b/print/Makefile
@@ -1,7 +1,50 @@
-# $NetBSD: Makefile,v 1.2 1997/11/26 15:35:36 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/12/29 02:47:45 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.52 1997/12/14 00:58:08 asami Exp
 #
 
+# the reversed ordering of a2ps43 and a2ps is intentional -- this
+# is to make sure the "Latest" link points to the latest version
+#    SUBDIR += a2ps43
+#    SUBDIR += a2ps
+#    SUBDIR += acroread
+#    SUBDIR += afm
+#    SUBDIR += apsfilter
+#    SUBDIR += asprint
+#    SUBDIR += bibcard
+#    SUBDIR += bibview
+#    SUBDIR += c2ps
+#    SUBDIR += detex
+#    SUBDIR += dvi2tty
+#    SUBDIR += dvi2xx
+#    SUBDIR += dvips
+#    SUBDIR += dvips2ascii
+#    SUBDIR += dviselect
+#    SUBDIR += enscript
+#    SUBDIR += ghostscript
+#    SUBDIR += ghostscript3
+#    SUBDIR += ghostscript4
     SUBDIR += ghostscript5
+#    SUBDIR += ghostview
+    SUBDIR += gv
+#    SUBDIR += html2latex
+#    SUBDIR += latex
+#    SUBDIR += lout
+#    SUBDIR += lprps
+#    SUBDIR += lyx
+#    SUBDIR += makeindex
+#    SUBDIR += mp
+#    SUBDIR += musixtex
+#    SUBDIR += pkfonts
+#    SUBDIR += psutils
+#    SUBDIR += rtf2latex
     SUBDIR += teTeX
+#    SUBDIR += tex
+#    SUBDIR += texinfo
+#    SUBDIR += tr2latex
+#    SUBDIR += transfig
+#    SUBDIR += virtualpaper
+#    SUBDIR += xdvi
+#    SUBDIR += xmbibtex
+#    SUBDIR += xmgr
 
 .include <bsd.port.subdir.mk>
