--- a/converters/Makefile
+++ b/converters/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.2 1997/11/22 03:13:23 hubertf Exp $
+# $NetBSD: Makefile,v 1.3 1997/12/29 03:25:50 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.8 1997/11/16 22:45:25 jseger Exp
 #
 
 #    SUBDIR += btoa
 #    SUBDIR += c2html
 #    SUBDIR += ish
-#    SUBDIR += kdesupport
+   SUBDIR += kdesupport
 #    SUBDIR += mimepp
 #    SUBDIR += mpack
 #    SUBDIR += p5-Convert-UU
