--- a/x11/kdebase/Makefile
+++ b/x11/kdebase/Makefile
@@ -1,9 +1,10 @@
 # New ports collection makefile for:   kdebase
-# Version required:    Beta1
+# Version required:    Beta2
 # Date created:        28 October 1997
 # Whom:                Stefan Eßer <se@freebsd.org>
 #
-# $Id: Makefile,v 1.1.1.1 1997/12/29 03:54:29 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/12/29 03:58:13 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.6 1997/11/27 00:35:27 se Exp
 #
 
 DISTNAME=	kdebase-Beta2-1
@@ -30,7 +31,9 @@ LIB_DEPENDS=	qt\\.1\\.3[0-9]:${PORTSDIR}/x11/qt \
 HAS_CONFIGURE=	yes
 CONFIGURE_ARGS=	"--prefix=$(PREFIX)" \
 		"--x-inc=$(X11BASE)/include -I$(PREFIX)/include -I$(PREFIX)/include/giflib" \
-		"--x-lib=$(X11BASE)/lib -L$(PREFIX)/lib"
+		"--x-lib=$(X11BASE)/lib -L$(PREFIX)/lib" \
+		"--with-qt-dir=$(PREFIX)" \
+		"--with-qt-includes=$(PREFIX)/include/qt"
 CONFIGURE_ENV=	CXXFLAGS="$(CFLAGS)"
 
 WRKSRC=		${WRKDIR}/kdebase
