--- a/games/Makefile
+++ b/games/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/11/26 12:49:52 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/12/29 04:07:15 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.87 1997/10/15 04:58:31 max Exp
 #
 
@@ -25,6 +25,7 @@
 #    SUBDIR += golddig
 #    SUBDIR += imaze
 #    SUBDIR += jetpack
+   SUBDIR += kdegames
 #    SUBDIR += klondike
 #    SUBDIR += lincity
 #    SUBDIR += nethack
