--- a/x11/xautolock/Makefile
+++ b/x11/xautolock/Makefile
@@ -3,7 +3,8 @@
 # Date created:		20 Jul 1996
 # Whom:			Eric Blood <eblood@cs.unr.edu>
 #
-# $Id: Makefile,v 1.1.1.1 1997/12/29 04:22:57 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/12/29 04:25:29 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.2 1996/11/18 09:55:42 asami Exp
 #
 
 DISTNAME=	xautolock-1pl10
@@ -17,5 +18,7 @@ MAINTAINER=	eblood@cs.unr.edu
 
 USE_IMAKE=	yes
 WRKSRC=		${WRKDIR}/xautolock.pl10
+
+MAN1=		xautolock.1
 
 .include <bsd.port.mk>
