--- a/x11/Xaw3d/Makefile
+++ b/x11/Xaw3d/Makefile
@@ -3,7 +3,7 @@
 # Date created:         30th November 1997
 # Whom:                 tron@lyssa.owl.de, soren@t.dk
 #
-# $NetBSD: Makefile,v 1.3 1997/12/29 02:33:41 hubertf Exp $
+# $NetBSD: Makefile,v 1.4 1997/12/30 15:13:30 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.14 1997/06/19 09:33:26 asami Exp
 #
 
@@ -21,6 +21,6 @@ post-extract:
 post-install:
 	${LDCONFIG} -m ${PREFIX}/lib
 	${MKDIR} -p ${PREFIX}/share/doc/Xaw3d
-	${CP} ${FILESDIR}/README.XAW3D ${PREFIX}/share/doc/Xaw3d
+	${CP} ${WRKSRC}/README.XAW3D ${PREFIX}/share/doc/Xaw3d
 
 .include <bsd.port.mk>
